--- a/src/assets/scss/main/_variables.scss
+++ b/src/assets/scss/main/_variables.scss
@@ -1,9 +1,9 @@
 :root {
     --black: #000;
-    --white: #5a67f9;
+    --white: #785d99;
     --ul-primary: #ffffff;
     --ul-secondary: #FAA019;
-    --ul-c3: rgb(90, 103, 249);
+    --ul-c3: rgb(120, 93, 153);
     --ul-c4: #FFF9F4;
     --ul-c5: #FC791A;
     --ul-black: #010F1C;
