--- a/src/assets/scss/main/_variables.scss
+++ b/src/assets/scss/main/_variables.scss
@@ -1,7 +1,7 @@
 :root {
     --black: #000;
-    --white: #785d99;
-    --ul-primary: #ffffff;
+    --white: #7b6398;
+    --ul-primary: #7b6398;
     --ul-secondary: #FAA019;
     --ul-c3: rgb(120, 93, 153);
     --ul-c4: #FFF9F4;
